# platform

./: .gitattributes  .gitignore  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  SettingsKeys.h  TagDB.sqlite3  XTagRev.1  aclocal.m4  client-glue.h  config.status  configure  configure.ac  configure.in  dbus_server.h  index.html  libplatformProj.xcconfig  libplatformTarget.xcconfig  libtool  main.cpp  main.h  osxutils.cpp  osxutils.h  platform.cpp  platform.h  server-glue.h  settingsdb.cpp  settingsdb.h  sqlite3x.hpp  tagdb-introspect.xml  tagdb.cpp  tagdb.h  test
XTagRev.xcodeproj/: project.pbxproj  r0ssar00.mode1v3
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
demos/: Makefile.am  database.cpp
doc/: Doxyfile.in  Makefile.am
doc/html/: Info.plist  Makefile  Nodes.xml  Tokens.xml  annotated.html  class_column-members.html  class_column.html  class_database-members.html  class_database.html  class_object-members.html  class_object.html  class_row-members.html  class_row.html  class_search-members.html  class_search.html  class_table-members.html  class_table.html  classes.html  classsqlite3x_1_1database__error-members.html  classsqlite3x_1_1database__error.html  classsqlite3x_1_1sqlite3__command-members.html  classsqlite3x_1_1sqlite3__command.html  classsqlite3x_1_1sqlite3__connection-members.html  classsqlite3x_1_1sqlite3__connection.html  classsqlite3x_1_1sqlite3__cursor-members.html  classsqlite3x_1_1sqlite3__cursor.html  classsqlite3x_1_1sqlite3__transaction-members.html  classsqlite3x_1_1sqlite3__transaction.html  classsqlite3x_1_1table__generator-members.html  classsqlite3x_1_1table__generator.html  core_8h-source.html  core_8h.html  database_8h-source.html  database_8h.html  dbus__platform_8h-source.html  dbus__platform_8h.html  files.html  functions.html  functions_func.html  globals.html  (+19 more)
include/: database.h  dbus_platform.h  libplatform.h  osx.h  search.h  settings.h  tags.h
libplatform.xcodeproj/: project.pbxproj  r0ssar00.mode1v3  r0ssar00.pbxuser
osx/: Makefile  Makefile.am  Makefile.in  libosx.la  libosx_la-osx.lo  osx.cpp
osx/.deps/: libosx_la-osx.Plo  osx.Po  osx.Tpo
osx/.libs/: libosx.la
platform/: core.h  database.h  sqlite3x.hpp  tags.h  types.h
platform.xcodeproj/: project.pbxproj
platformkernel.xcodeproj/: project.pbxproj  r0ssar00.mode1v3
shared_database/: shared_database.c
sqlite3x/: Makefile  Makefile.am  Makefile.in  libsqlite3x.la  libsqlite3x_la-sqlite3x_command.lo  libsqlite3x_la-sqlite3x_connection.lo  libsqlite3x_la-sqlite3x_cursor.lo  libsqlite3x_la-sqlite3x_exception.lo  libsqlite3x_la-sqlite3x_settings_db.lo  libsqlite3x_la-sqlite3x_transaction.lo  sqlite3x_connection.cpp
sqlite3x/.deps/: libsqlite3x_la-sqlite3x_command.Plo  libsqlite3x_la-sqlite3x_connection.Plo  libsqlite3x_la-sqlite3x_cursor.Plo  libsqlite3x_la-sqlite3x_exception.Plo  libsqlite3x_la-sqlite3x_settings_db.Plo  libsqlite3x_la-sqlite3x_transaction.Plo  sqlite3x_command.Plo  sqlite3x_command.Po  sqlite3x_connection.Plo  sqlite3x_connection.Po  sqlite3x_cursor.Plo  sqlite3x_cursor.Po  sqlite3x_exception.Plo  sqlite3x_exception.Po  sqlite3x_settings_db.Plo  sqlite3x_settings_db.Po  sqlite3x_transaction.Plo  sqlite3x_transaction.Po
sqlite3x/.libs/: libsqlite3x.la
src/: Makefile  Makefile.am  Makefile.in  core.cpp  database.cpp  database.lo  dbus_platform.cpp  libobjcpplibs.la  libobjcpplibs_la-search.lo  libobjcpplibs_la-tags.lo  libplatform.cpp  libplatform.la  search.cpp  settings.cpp  tags.cpp  test.cpp
src/.deps/: core.Po  database.Plo  database.Po  dbus_platform.Po  libobjcpplibs_la-search.Plo  libobjcpplibs_la-tags.Plo  libplatform.Po  search.Plo  search.Po  settings.Po  tags.Plo  tags.Po
src/.libs/: libobjcpplibs.la  libplatform.0.dylib  libplatform.dylib  libplatform.la  libplatform.lai
src/.libs/libplatform.0.dylib.dSYM/Contents/: Info.plist
src/.libs/libplatform.0.dylib.dSYM/Contents/Resources/DWARF/: libplatform.0.dylib
tests/: Makefile.am
