#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(platform, 0.5, r0ssar00@gmail.com)
AC_CONFIG_SRCDIR([.])
AM_INIT_AUTOMAKE(platform, 0.5)
for top_builddir in . .. ../.. $ac_auxdir $ac_auxdir/..; do
  test -f $top_builddir/configure && break
done

# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_MKDIR_P

# Checks for libraries.
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)

# Checks for header files.
AC_HEADER_STDC

# Checks for header files.
AC_CHECK_HEADER([sqlite3.h],[],[AC_ERROR([SQlite3 engine not installed.  Install SQlite3.])])
AC_CHECK_HEADER([cc++/common.h],[],[AC_ERROR([GNU Telephony project commoncpp not installed.  Install commoncpp.])])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT64_T
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 osx/Makefile
                 sqlite3x/Makefile
                 src/Makefile])
AC_OUTPUT
